# infer.py

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  example-basic.py  example-deepseek.py  example-deepseek2.py  example-deepseek3.py  example-deepseek4.py  example-dynamictemp.py  example-influence.py  example-interfere.py  infer.py  pyproject.toml  requirements.txt
infermlx/: infer.py
